--- a/.github/workflows/object-filter.yml
+++ b/.github/workflows/object-filter.yml
@@ -8,3 +8,6 @@ jobs:
       - run: echo $ACTION_EVENT
         env:
           ACTION_EVENT: ${{toJson(github.event)}}
+      - run: echo $ACTION_PUSHER
+        env:
+          ACTION_PUSHER: ${{toJson(github.event.*.pusher)}}
